Added comments, combined reducers

--- a/src/app/movie-list/components/movie-details/movie-details.component.html
+++ b/src/app/movie-list/components/movie-details/movie-details.component.html
@@ -1,9 +1,7 @@
-<p>
-  movie-details works!
-</p>
-
 <h2>Movie ID from url: {{ movieId }}</h2>
 
 <div class="movie-details-container">
-  {{id | async}}
+  <br/> {{ movie$.name }}
+
+  <br/> {{movie$.description}}
 </div>
