Add some styling & layout

--- a/src/app/movie-list/components/movie-details/movie-details.component.html
+++ b/src/app/movie-list/components/movie-details/movie-details.component.html
@@ -1,7 +1,36 @@
-<h2>Movie ID from url: {{ movieId }}</h2>
+<div class="col-sm-8 movie-details-container mx-auto">
 
-<div class="movie-details-container">
-  <br/> {{ movie$.name }}
+  <h1 class="d-inline-block"> {{ movie$.name }}</h1>
 
-  <br/> {{movie$.description}}
+  <div class="rating">
+    <span>Rating:</span>
+
+    <span class="rating-value">
+      <i class="fa fa-star"></i> {{ movie$.rate }} </span>
+    <span class="rating-max"> / 10</span>
+  </div>
+
+  <div class="extra-info">
+
+    <div class="movie-length">
+      <span class="title">Movie duration: </span>
+      <span class="data">{{ movie$.length }}</span>
+    </div>
+
+    <div class="movie-genres">
+      <span class="title">Genres: </span>
+      <span class="data">{{ movie$.genres}}</span>
+    </div>
+
+    <div class="movie-image">
+      <img class="img-thumbnail col-sm-6" src="/assets/images/movie-covers/{{movie$.img}}" alt="{{movie$.name}}">
+    </div>
+
+    <div class="movie-description">
+      <span class="title">Movie description: </span>
+      <br/>
+      <span class="data"> {{movie$.description}}</span>
+    </div>
+
+  </div>
 </div>
