--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <router-outlet></router-outlet>
+<app-header></app-header>
+<div class="container-fluid app">
+  <div class="row">
+    <router-outlet></router-outlet>
+  </div>
 </div>
+<app-footer></app-footer>
