--- a/src/app/movie-list/components/movie-preview/movie-preview.component.html
+++ b/src/app/movie-list/components/movie-preview/movie-preview.component.html
@@ -1,8 +1,8 @@
 <div class="movie-preview">
   <a routerLink="/movie-details/{{movie.id}}">
-    <h3>{{ movie.name }} </h3>
-    <h4>Rating: {{ movie.rate }}</h4>
+    <h5>{{ movie.name }} </h5>
+    <h6>Rating: {{ movie.rate }}</h6>
 
-    <img src="/assets/images/movie-covers/{{movie.img}}" alt="image">
+    <img class="img-thumbnail" src="/assets/images/movie-covers/{{movie.img}}" alt="image">
   </a>
 </div>
