--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.css';
+@import '~font-awesome/css/font-awesome.css';
+
+$main-color: #343a40;
+
+.fa {
+  font-size: 20px;
+}
+
+.ghost {
+  margin: 0 5px;
+  color: $main-color;
+}
