--- a/src/app/movie-list/components/movie-details/movie-details.component.scss
+++ b/src/app/movie-list/components/movie-details/movie-details.component.scss
@@ -1,5 +1,10 @@
 @import '../../../../styles.scss'; // Import globals
 
+// :host applies styles to the Angular Component itself 'app-movie-details'
+:host {
+  width: 100%;
+}
+
 .movie-details-container {
   .rating {
     &-value {
