Implement search, move store subscriptions to ngOnInit

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-dark bg-dark mb-2">
   <a class="navbar-brand" routerLink="/movie-list">Movie App</a>
 
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search movies" aria-label="Search">
-    <i class="fa fa-search position-absolute"></i>
-  </form>
+
+  <app-search></app-search>
 </nav>
